--- a/loan_application_service/pom.xml
+++ b/loan_application_service/pom.xml
@@ -42,6 +42,10 @@
       <version>2.3.0</version>
    </dependency>
 
+      <dependency>
+        <groupId>com.fasterxml.jackson.dataformat</groupId>
+        <artifactId>jackson-dataformat-xml</artifactId>
+      </dependency>
 
 	</dependencies>
 
