--- a/loan_application_service/pom.xml
+++ b/loan_application_service/pom.xml
@@ -47,6 +47,15 @@
         <artifactId>jackson-dataformat-xml</artifactId>
       </dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-test</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
