--- a/loan_application_service/src/main/resources/application.yml
+++ b/loan_application_service/src/main/resources/application.yml
@@ -9,6 +9,7 @@ spring:
     hibernate:
       ddl-auto: update 
     
-
+  application:
+    name: loan-application-service
 server:
   port: 4040    
