--- a/loan_application_service/pom.xml
+++ b/loan_application_service/pom.xml
@@ -70,6 +70,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>loan-service</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
